--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_fill.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_fill.htm
@@ -16,24 +16,24 @@ FillLayout
 <H3>
 FillLayout</H3>
 <P >
-<b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
-FillLayout</a></b> is the simplest layout class. It lays out widgets in a single row or column, forcing them to be the same size. Initially, the widgets will all be as tall as the tallest widget, and as wide as the widest.
-<b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
-FillLayout</a></b> does not wrap, and you cannot specify margins or spacing. </P>
+<strong><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
+FillLayout</a></strong> is the simplest layout class. It lays out widgets in a single row or column, forcing them all to be the same size. Initially, the widgets will all be as tall as the tallest widget and as wide as the widest.
+<strong><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
+FillLayout</a></strong> does not wrap, and you cannot specify margins or spacing. </P>
 <P >
-You might use a <b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
-FillLayout</a></b> to lay out buttons in a task bar or tool bar, or to stack checkboxes in a
-<b><a href="../reference/api/org/eclipse/swt/widgets/Group.html">Group</a></b>.&nbsp;&nbsp;
-<b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">FillLayout</a></b>
-can also be used when a <b><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a></b>
-only has one child. In the example above, the <b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
-FillLayout</a></b> causes the label to completely the fill its parent shell.</P>
+You might use a <strong><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
+FillLayout</a></strong> to lay out buttons in a task bar or tool bar, or to stack checkboxes in a
+<strong><a href="../reference/api/org/eclipse/swt/widgets/Group.html">Group</a></strong>.&nbsp;&nbsp;
+<strong><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">FillLayout</a></strong>
+can also be used when a <strong><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a></strong>
+only has one child. In the example above, the <strong><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
+FillLayout</a></strong> forces the label to completely the fill its parent shell.</P>
 
 
 <P >
 The following table summarizes the attributes of
-<b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
-FillLayout</a></b>.</P>
+<strong><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
+FillLayout</a></strong>.</P>
 
 
 <TABLE BORDER="1">
@@ -50,10 +50,10 @@ Description</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>type</b></P>
+<strong>type</strong></P>
 </TD>
 <TD>
-<P CLASS="CellBody">Can be one of <b>HORIZONTAL </b>(layout in a row), <b>VERTICAL</b>
+<P CLASS="CellBody">Can be one of <strong>HORIZONTAL </strong>(layout in a row), <strong>VERTICAL</strong>
  (layout in a column). </P>
 </TD>
 </TR>
