--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_form.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_form.htm
@@ -15,38 +15,38 @@ FormLayout
 
 <H3>
 FormLayout</H3>
-<P ><a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><b>FormLayout</b></a>
-lays out widgets using an attachment model.&nbsp; A <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><b>FormAttachment
-</b></a>can be defined for each side of a widget and stored in its layout data (<a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a>).&nbsp;
-The <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a><b>
-</b>can be used to designate a requested <b>width</b> and <b>height</b> for the
-widget, provided these values don't conflict with the attachment constraints.&nbsp;&nbsp;</P>
-<P >A <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><b>FormAttachment
-</b></a>is used to attach a designated side of the widget to the parent <b><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a>
-</b>or another widget in the layout.&nbsp; Typically, you do not set attachments
+<P ><a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><strong>FormLayout</strong></a>
+lays out widgets using an attachment model.&nbsp; A <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><strong>FormAttachment
+</strong></a>can be defined for each side of a widget and stored in its layout data (<a href="../reference/api/org/eclipse/swt/layout/FormData.html"><strong>FormData</strong></a>).&nbsp;
+The <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><strong>FormData</strong></a><strong>
+</strong>can be used to designate a requested <strong>width</strong> and <strong>height</strong> for the
+widget, provided that these values do not conflict with the attachment constraints.&nbsp;&nbsp;</P>
+<P >A <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><strong>FormAttachment
+</strong></a>is used to attach a designated side of the widget to the parent <strong><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a>
+</strong>or another widget in the layout.&nbsp; You typically do not set attachments
 on all sides of a widget.&nbsp; It is very common to specify only one horizontal
-(<b>left</b> or <b>right</b>) attachment and one vertical (<b>top</b> or <b>bottom</b>)
-attachment and allow the widgets to take the size specified in their <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a><b>,
-</b>or their preferred size, if no size is specified in the <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a>.</P>
+(<strong>left</strong> or <strong>right</strong>) attachment and one vertical (<strong>top</strong> or <strong>bottom</strong>)
+attachment and allow the widgets to take the size specified in their <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><strong>FormData</strong></a><strong>,
+</strong>or their preferred size if no size is specified in the <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><strong>FormData</strong></a>.</P>
 <P >Attachments can be configured in a variety of ways:</P>
 <ul>
-  <li>You can attach the specified side of a widget to a <b>position</b> (percentage value
-0-100) in the parent widget.&nbsp; An optional pixel <b>offset</b> can be added.</li>
+  <li>You can attach the specified side of a widget to a <strong>position</strong> (percentage value
+0-100) in the parent widget.&nbsp; An optional pixel <strong>offset</strong> can be added.</li>
   <li>You can attach the specified side of a widget to the adjacent side of a target widget
-inside the composite.&nbsp; An optional pixel <b>offset</b> can be added.&nbsp;
-The side where the target widget is attached is inferred based on the side
-specified in the source widget.&nbsp; For example, attaching the <b>top</b> edge
-to a widget implies that it is being attached to the <b>bottom</b> edge of the
+inside the composite.&nbsp; An optional pixel <strong>offset</strong> can be added.&nbsp;
+The side where the target widget is attached is inferred based upon the side
+specified in the source widget.&nbsp; For example, attaching the <strong>top</strong> edge
+to a widget implies that it is being attached to the <strong>bottom</strong> edge of the
     adjacent widget.</li>
   <li>You can attach the specified side of a widget to a particular side of a target widget
-inside the composite.&nbsp; An optional pixel <b>offset</b> can be added.&nbsp;
+inside the composite.&nbsp; An optional pixel <strong>offset</strong> can be added.&nbsp;
 This can be used, for example, to align the top of a widget with the top of
 another widget so that they will always line up vertically.</li>
   <li>You can center the widget relative to a target widget.&nbsp; The center need only be
-specified for one side (<b>left</b> or <b>right</b>, <b>top</b> or <b>bottom</b>)
+specified for one side (<strong>left</strong> or <strong>right</strong>, <strong>top</strong> or <strong>bottom</strong>)
 in the direction being centered.</li>
 </ul>
-<p>The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><b>FormLayout</b></a><b>.</b></p>
+<p>The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><strong>FormLayout</strong></a><strong>:</strong></p>
 <TABLE BORDER="1" width="658">
 <TR>
 <TH ROWSPAN="1" COLSPAN="1" width="163">
@@ -61,7 +61,7 @@ Description</P>
 <TR>
 <TD width="163">
 <P CLASS="CellBody">
-<b>marginHeight</b></P>
+<strong>marginHeight</strong></P>
 </TD>
 <TD width="479">
 <P CLASS="CellBody">Specifies the number of pixels of vertical margin that will
@@ -70,7 +70,7 @@ be placed along the top and bottom edges of the layout.</P>
 </TR>
 <tr>
 <TD width="163">
-<P CLASS="CellBody"><b>marginWidth</b></P>
+<P CLASS="CellBody"><strong>marginWidth</strong></P>
 </TD>
 <TD width="479">
 <P CLASS="CellBody">Specifies the number of pixels of horizontal margin that
@@ -80,7 +80,7 @@ will be placed along the left and right edges of the layout.</P>
 </TABLE>
 
 
-<p>The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><b>FormData</b></a><b>.</b></p>
+<p>The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><strong>FormData</strong></a><strong>:</strong></p>
 <TABLE BORDER="1" width="658">
 <TR>
 <TH ROWSPAN="1" COLSPAN="1" width="163">
@@ -95,41 +95,41 @@ Description</P>
 <TR>
 <TD width="163">
 <P CLASS="CellBody">
-<b>top</b></P>
+<strong>top</strong></P>
 </TD>
 <TD width="479">
-<P CLASS="CellBody">Specifies the attachment for the <b>top</b> side of the
+<P CLASS="CellBody">Specifies the attachment for the top side of the
 control.</P>
 </TD>
 </TR>
 <tr>
 <TD width="163">
-<P CLASS="CellBody"><b>left</b></P>
+<P CLASS="CellBody"><strong>left</strong></P>
 </TD>
 <TD width="479">
-<P CLASS="CellBody">Specifies the attachment for the <b>left</b> side of the
+<P CLASS="CellBody">Specifies the attachment for the left side of the
 control.</P>
 </TD>
 </tr>
 <tr>
 <TD width="163">
-<b>bottom</b>
+<strong>bottom</strong>
 </TD>
 <TD width="479">
-Specifies the attachment for the <b>bottom</b> side of the control.
+Specifies the attachment for the bottom side of the control.
 </TD>
 </tr>
 <tr>
 <TD width="163">
-<b>right</b>
+<strong>right</strong>
 </TD>
 <TD width="479">
-Specifies the attachment for the <b>right</b> side of the control.
+Specifies the attachment for the right side of the control.
 </TD>
 </tr>
 <tr>
 <TD width="163">
-<b>width</b>
+<strong>width</strong>
 </TD>
 <TD width="479">
 Specifies the preferred width in pixels of the control in the form.
@@ -137,7 +137,7 @@ Specifies the preferred width in pixels of the control in the form.
 </tr>
 <tr>
 <TD width="163">
-<b>height</b>
+<strong>height</strong>
 </TD>
 <TD width="479">
 Specifies the preferred height in pixels of the control in the form.
@@ -147,7 +147,7 @@ Specifies the preferred height in pixels of the control in the form.
 
 
 <p>
-The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><b>FormAttachment.</b></a></p>
+The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><strong>FormAttachment:</strong></a></p>
 
 
 <TABLE BORDER="1" width="658">
@@ -163,24 +163,24 @@ Description</P>
 </TR>
 <TR>
 <TD width="163">
-<P CLASS="CellBody"><b>alignment</b></P>
+<P CLASS="CellBody"><strong>alignment</strong></P>
 </TD>
 <TD width="479">
 <P CLASS="CellBody">Specifies the alignment of the control side that is attached
-to a control.&nbsp; <b>DEFAULT</b> indicates that the widget should be attached
-to the adjacent side of the specified <b>control</b>.&nbsp; For top and bottom
-attachments, <b>TOP</b>, <b>BOTTOM</b>, and <b>CENTER</b> are used to indicate
-attachment of the specified side of the widget to the specified side of the <b>control</b>.&nbsp;
-For left and right attachments, <b>LEFT</b>, <b>RIGHT</b>, and <b>CENTER</b> are
+to a control.&nbsp; <strong>DEFAULT</strong> indicates that the widget should be attached
+to the adjacent side of the specified <strong>control</strong>.&nbsp; For top and bottom
+attachments, <strong>TOP</strong>, <strong>BOTTOM</strong>, and <strong>CENTER</strong> are used to indicate
+attachment of the specified side of the widget to the specified side of the <strong>control</strong>.&nbsp;
+For left and right attachments, <strong>LEFT</strong>, <strong>RIGHT</strong>, and <strong>CENTER</strong> are
 used to indicate attachment of the specified side of the widget to the specified
-side of the <b>control</b>.&nbsp; (For example, using <b>TOP</b> indicates that
-the <b>top</b> side of the attachment's widget should be attached to the top
-side of the specified <b>control</b>.)</P>
+side of the <strong>control</strong>.&nbsp; (For example, using <strong>TOP</strong> indicates that
+the <strong>top</strong> side of the attachment's widget should be attached to the top
+side of the specified <strong>control</strong>.)</P>
 </TD>
 </TR>
 <tr>
 <TD width="163">
-<P CLASS="CellBody"><b>control</b></P>
+<P CLASS="CellBody"><strong>control</strong></P>
 </TD>
 <TD width="479">
 <P CLASS="CellBody">Specifies the target control to which the attachment's
@@ -189,7 +189,7 @@ widget is attached.</P>
 </tr>
 <tr>
 <TD width="163">
-<b>denominator</b>
+<strong>denominator</strong>
 </TD>
 <TD width="479">
 Specifies the denominator of the &quot;a&quot; term in the equation, y=ax+b,
@@ -198,7 +198,7 @@ which defines the attachment.
 </tr>
 <tr>
 <TD width="163">
-<b>numerator</b>
+<strong>numerator</strong>
 </TD>
 <TD width="479">
 Specifies the numerator of the &quot;a&quot; term in the equation y=ax+b, which
@@ -207,7 +207,7 @@ defines the attachment.
 </tr>
 <tr>
 <TD width="163">
-<b>offset</b>
+<strong>offset</strong>
 </TD>
 <TD width="479">
 Specifies the offset in pixels of the control side from the attachment
@@ -224,7 +224,7 @@ term in the equation y=ax+b, which defines the attachment.
 
 <p>
 See&nbsp;<a href="http://www.eclipse.org/articles/Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
-Layouts in SWT</a>
+layouts in SWT</a>
 for further descriptions and example screen captures using the various
 attachment styles.</p>
 
