--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_row.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_row.htm
@@ -16,27 +16,27 @@ RowLayout
 <H3>
 RowLayout</H3>
 <P >
-<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
-RowLayout</b></a> lays out widgets in rows, but is more flexible than <b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
-FillLayout</a></b>. The <b>type</b> field controls whether the widgets will be
+<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><strong>
+RowLayout</strong></a> lays out widgets in rows, but is more flexible than <strong><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
+FillLayout</a></strong>. The <strong>type</strong> field controls whether the widgets will be
 placed in horizontal rows or vertical columns.</P>
-<P >It can optionally <b>wrap</b> the widgets, creating as many rows or columns as needed to display them. It also provides configurable margins on each edge of the layout, and configurable spacing between widgets in the layout. You can
-<b> pack</b> a
-<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
-RowLayout</b></a>, which will force all widgets to be the same size. If you <b> justify</b> a
-<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
-RowLayout</b></a>, extra space remaining in the <b><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a>
-</b>will be allocated as margins between the widgets.</P>
+<P >It can optionally <strong>wrap</strong> the widgets, creating as many rows or columns as are needed to display them. It also provides configurable margins on each edge of the layout, and configurable spacing between widgets within the layout. You can
+<strong> pack</strong> a
+<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><strong>
+RowLayout</strong></a>, which will force all widgets to be the same size. If you <strong> justify</strong> a
+<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><strong>
+RowLayout</strong></a>, extra space remaining in the <strong><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a>
+</strong>will be allocated as margins between the widgets.</P>
 <P >
-The height and width of each widget in a <a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
-RowLayout</b></a> can be specified in a <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><b> RowData</b></a> 
+The height and width of each widget in a <a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><strong>
+RowLayout</strong></a> can be specified in a <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><strong> RowData</strong></a> 
 object which should be set in the widget using
-<b>setLayoutData</b>.</P>
+<strong>setLayoutData(Object)</strong>.</P>
 
 
 <p>The following table summarizes the attributes of
-<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
-RowLayout</b></a>.</p>
+<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><strong>
+RowLayout</strong></a>.</p>
 <table BORDER="1">
   <tr>
     <th ROWSPAN="1" COLSPAN="1">
@@ -48,54 +48,54 @@ RowLayout</b></a>.</p>
   </tr>
   <tr>
     <td>
-      <p CLASS="CellBody"><b>justify</b></p>
+      <p CLASS="CellBody"><strong>justify</strong></p>
     </td>
     <td>
-      <p CLASS="CellBody">Can be one of <b>SWT.HORIZONTAL </b>(layout in a row),
-      <b>SWT.VERTICAL</b> (layout in a column).</p>
+      <p CLASS="CellBody">Can be one of <strong>HORIZONTAL </strong>(layout in a row),
+      <strong>VERTICAL</strong> (layout in a column).</p>
     </td>
   </tr>
   <tr>
-    <td><b>marginBottom</b></td>
+    <td><strong>marginBottom</strong></td>
     <td>Specifies the number of pixels to be placed along the bottom edge of the
       layout.</td>
   </tr>
   <tr>
-    <td><b>marginLeft</b></td>
+    <td><strong>marginLeft</strong></td>
     <td>Specifies the number of pixels to be placed along the left edge of the
       layout.</td>
   </tr>
   <tr>
-    <td><b>marginRight</b></td>
+    <td><strong>marginRight</strong></td>
     <td>Specifies the number of pixels to be placed along the right edge of the
       layout.</td>
   </tr>
   <tr>
-    <td><b>marginTop</b></td>
+    <td><strong>marginTop</strong></td>
     <td>Specifies the number of pixels to be placed along the top edge of the
       layout.</td>
   </tr>
   <tr>
-    <td><b>pack</b></td>
+    <td><strong>pack</strong></td>
     <td>Specifies whether all widgets should be forced to be the same size.</td>
   </tr>
   <tr>
-    <td><b>spacing</b></td>
+    <td><strong>spacing</strong></td>
     <td>Specifies the number of pixels between one cell and its adjacent cells</td>
   </tr>
   <tr>
-    <td><b>type</b></td>
-    <td>Can be one of <b>HORIZONTAL </b>(layout in rows), <b>VERTICAL</b>
+    <td><strong>type</strong></td>
+    <td>Can be one of <strong>HORIZONTAL </strong>(layout in rows), <strong>VERTICAL</strong>
       (layout in columns).</td>
   </tr>
   <tr>
-    <td><b>wrap</b></td>
+    <td><strong>wrap</strong></td>
     <td>Specifies whether a control will be wrapped to the next row or column if
       there is insufficient space in<br>
       the current row or column.</td>
   </tr>
 </table>
-<p>The following table summarize the attributes of <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><b> RowData</b></a>.</p>
+<p>The following table summarize the attributes of <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><strong> RowData</strong></a>.</p>
 <table BORDER="1" width="681">
   <tr>
     <th ROWSPAN="1" COLSPAN="1" width="90">
@@ -107,7 +107,7 @@ RowLayout</b></a>.</p>
   </tr>
   <tr>
     <td width="90">
-      <p CLASS="CellBody"><b>width</b></p>
+      <p CLASS="CellBody"><strong>width</strong></p>
     </td>
     <td width="575">
       <p CLASS="CellBody">Specifies the width of the cell in pixels.</p>
@@ -115,7 +115,7 @@ RowLayout</b></a>.</p>
   </tr>
   <tr>
     <td width="90">
-      <b>height</b>
+      <strong>height</strong>
     </td>
     <td width="575">
       Specifies the height of the cell in pixels.
