--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
@@ -19,27 +19,27 @@ Once we create a display and some widgets, and start up the application's messag
 loop, where does the real work happen? It happens every time an event is read from the queue and dispatched to
 a widget. Most of the application logic is implemented as responses to user events.</P>
 <P >
-The basic pattern is that you add a listener to some widget that you have created. When the appropriate event occurs,
-the listener code is executed. This simple example is adapted from
-<b>org.eclipse.swt.examples.helloworld.HelloWorld3</b>.</P>
+The basic pattern is that you add a listener to some widget that you have created, and when the appropriate event occurs
+the listener code will be executed. This simple example is adapted from
+<strong>org.eclipse.swt.examples.helloworld.HelloWorld3</strong>:</P>
 <font color='#4444CC'><pre>
    Display display = new Display ();
    Shell shell = new Shell (display);
    Label label = new Label (shell, SWT.CENTER);
    ...
-   shell.addControlListener(new ControlAdapter() {
-      public void controlResized(ControlEvent e) {
+   shell.addControlListener (new ControlAdapter () {
+      public void controlResized (ControlEvent e) {
          label.setBounds (shell.getClientArea ());
       }
    });
 </pre></font>
 <P >
-For each type of listener, there is an interface that defines the listener (<b>XyzListener</b>), a class that provides event information
-(<b>XyzEvent</b>), and an API method to add the listener (<b>addXyzListener</b>).&nbsp;
-If there is more than one method defined in the listener interface, an adapter
-(<b>XyzAdapter</b>) that implements the listener interface and provides empty methods
-is provided. All of the events, listeners, and adapters are defined in the package
-<b><a href="../reference/api/org/eclipse/swt/events/package-summary.html">org.eclipse.swt.events</a></b>.</P>
+For each type of listener, there is an interface that defines the listener (<em>Xyz</em><strong>Listener</strong>), a class that provides event information
+(<em>Xyz</em><strong>Event</strong>), and an API method to add the listener (<strong>add</strong><em>Xyz</em><strong>Listener</strong>).&nbsp;
+If there is more than one method defined in the listener interface then an adapter
+(<em>Xyz</em><strong>Adapter</strong>) that implements the listener interface and provides empty methods
+is provided as well. All of the events, listeners, and adapters are defined in the package
+<strong><a href="../reference/api/org/eclipse/swt/events/package-summary.html">org.eclipse.swt.events</a></strong>.</P>
 <P >
 The following table summarizes the events that are available and the widgets
 that support each event.</P>
@@ -61,8 +61,8 @@ Widgets</P>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Arm</b></P>
+<strong>
+Arm</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -70,15 +70,15 @@ Generated when a widget, such as a menu item, is armed.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-MenuItem</b></P>
+<strong>
+MenuItem</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -86,14 +86,14 @@ Generated when a control is moved or resized.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>Control</b>, <b>TableColumn</b>, <b> Tracker</b></P>
+<strong>Control</strong>, <strong>TableColumn</strong>, <strong> Tracker</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Dispose</b></P>
+<strong>
+Dispose</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -101,15 +101,15 @@ Generated when a widget is disposed, either programmatically or by the user.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Widget</b></P>
+<strong>
+Widget</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Focus</b></P>
+<strong>
+Focus</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -117,15 +117,15 @@ Generated when a control gains or loses focus.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Help</b></P>
+<strong>
+Help</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -133,14 +133,14 @@ Generated when the user requests help for a widget, such as pressing the F1 key.
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>Control</b>, <b>Menu</b>, <b> MenuItem</b></P>
+<strong>Control</strong>, <strong>Menu</strong>, <strong> MenuItem</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Key</b></P>
+<strong>
+Key</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -149,15 +149,15 @@ keyboard focus.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Menu</b></P>
+<strong>
+Menu</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -165,15 +165,15 @@ Generated when a menu is hidden or shown.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Menu</b></P>
+<strong>
+Menu</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Modify</b></P>
+<strong>
+Modify</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -181,15 +181,15 @@ Generated when a widget's text is modified.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-CCombo</b>, <b>Combo</b>, <b>Text</b>, <b> StyledText</b></P>
+<strong>
+CCombo</strong>, <strong>Combo</strong>, <strong>Text</strong>, <strong> StyledText</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Mouse</b></P>
+<strong>
+Mouse</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -198,15 +198,15 @@ control.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-MouseMove</b></P>
+<strong>
+MouseMove</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -214,15 +214,15 @@ Generated as the user moves the mouse across the control.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-MouseTrack</b></P>
+<strong>
+MouseTrack</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -230,15 +230,15 @@ Generated when the mouse enters, exits, or hovers over the control.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Paint</b></P>
+<strong>
+Paint</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -246,15 +246,15 @@ Generated when the control needs to be repainted.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Selection</b></P>
+<strong>
+Selection</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -262,17 +262,17 @@ Generated when the user selects an item in the control.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>Button</b>, <b>CCombo</b>, <b>Combo</b>, <b>CoolItem</b>, <b>CTabFolder</b>, <b>List</b>,
-<b> MenuItem</b>, <b>Sash</b>, <b>Scale</b>, <b> ScrollBar</b>, <b>Slider</b>, <b> StyledText</b>,
-<b> TabFolder</b>, <b>Table</b>, <b>Table Cursor</b>,&nbsp; <b>TableColumn</b>, <b> TableTree</b>,
-<b>Text</b>, <b>ToolItem</b>, <b> Tree</b></P>
+<strong>Button</strong>, <strong>CCombo</strong>, <strong>Combo</strong>, <strong>CoolItem</strong>, <strong>CTabFolder</strong>, <strong>List</strong>,
+<strong> MenuItem</strong>, <strong>Sash</strong>, <strong>Scale</strong>, <strong> ScrollBar</strong>, <strong>Slider</strong>, <strong> StyledText</strong>,
+<strong> TabFolder</strong>, <strong>Table</strong>, <strong>Table Cursor</strong>,&nbsp; <strong>TableColumn</strong>, <strong> TableTree</strong>,
+<strong>Text</strong>, <strong>ToolItem</strong>, <strong> Tree</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Shell</b></P>
+<strong>
+Shell</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -281,15 +281,15 @@ closed.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Shell</b></P>
+<strong>
+Shell</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Traverse</b></P>
+<strong>
+Traverse</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -297,15 +297,15 @@ Generated when a control is traversed by the user using keystrokes.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control</b></P>
+<strong>
+Control</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Tree</b></P>
+<strong>
+Tree</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -313,14 +313,14 @@ Generated when the user expands or collapses items in the tree.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>Tree</b>, <b> TableTree</b></P>
+<strong>Tree</strong>, <strong> TableTree</strong></P>
 </TD>
 </TR>
 <TR>
 <TD width="101">
 <P CLASS="CellBody">
-<b>
-Verify</b></P>
+<strong>
+Verify</strong></P>
 </TD>
 <TD width="224">
 <P CLASS="CellBody">
@@ -328,7 +328,7 @@ Generated when a widget's text is about to be modified. Gives the application a 
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>Text</b>, <b> StyledText</b></P>
+<strong>Text</strong>, <strong> StyledText</strong></P>
 </TD>
 </TR>
 </TABLE>
@@ -338,25 +338,25 @@ Untyped events</H4>
 <P >
 The typed event system described above is implemented with a low level, untyped widget event mechanism. This mechanism is not intended to be used by applications, but you will see it used inside of the SWT implementation. It is also used in many of the workbench wizard page implementations.</P>
 <P >
-The untyped mechanism relies on a constant to identify the type of event and defines a generic listener that is supplied with this constant. This allows the listener to implement a &quot;case style&quot; listener. In the following snippet, we define a generic event handler and add several listeners to a shell.</P>
+The untyped mechanism relies on a constant to identify the event type and defines a generic listener that is supplied with this constant. This allows the listener to implement a &quot;case style&quot; listener. In the following snippet, we define a generic event handler and add several listeners to a shell.</P>
 <font color='#4444CC'><pre>
-   Shell shell = new Shell();
-   Listener listener = new Listener() {
-      public void handleEvent(Event e) {
+   Shell shell = new Shell ();
+   Listener listener = new Listener () {
+      public void handleEvent (Event e) {
          switch (e.type) {
             case SWT.Resize:
-               System.out.println(&quot;Resize received.&quot;);
+               System.out.println (&quot;Resize received&quot;);
                break;
             case SWT.Paint:
-               System.out.println(Paint received.&quot;);
+               System.out.println (&quot;Paint received&quot;);
                break;
             default:
-               System.out.println(&quot;Unknown event received&quot;);
+               System.out.println (&quot;Unknown event received&quot;);
          }
       }
    };
-   shell.addListener(SWT.Resize, listener);
-   shell.addListener(SWT.Paint, listener);
+   shell.addListener (SWT.Resize, listener);
+   shell.addListener (SWT.Paint, listener);
 </pre></font>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
