--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts.htm
@@ -14,50 +14,50 @@ Layouts
 <H2>
 Layouts</H2>
 <P >
-We've seen some simple examples that show how to size or position child widgets based on the size of the parent. So far,
+We have seen some simple examples that show how to size or position child widgets based on the size of the parent. So far,
 this kind of computation has occurred in response to a resize listener. This is often the best way to handle simple widget positioning. However, there are common patterns used by applications when placing widgets. These patterns can be structured as configurable layout algorithms that can be reused by many different applications.</P>
 <P >
-SWT defines <b> layouts</b> that provide general purpose positioning and sizing of child widgets in a composite. Layouts are subclasses of the abstract class
-<b><a href="../reference/api/org/eclipse/swt/widgets/Layout.html">Layout</a></b>. The SWT standard layouts can be found in the
-<b><a href="../reference/api/org/eclipse/swt/layout/package-summary.html"> org.eclipse.swt.layout</a></b> package.</P>
+SWT defines <em> layouts</em> that provide general purpose positioning and sizing of child widgets in a composite. Layouts are subclasses of the abstract class
+<strong><a href="../reference/api/org/eclipse/swt/widgets/Layout.html">Layout</a></strong>. The SWT standard layouts can be found in the
+<strong><a href="../reference/api/org/eclipse/swt/layout/package-summary.html"> org.eclipse.swt.layout</a></strong> package.</P>
 
 <P >
 You should understand some general definitions when resizing and positioning
-widgets. </P>
+widgets: </P>
 <ul>
-  <li>The <b>location</b> of a widget is its x,y coordinate location within its
+  <li>The <em>location</em> of a widget is its x,y coordinate location within its
     parent widget.</li>
-  <li>The <b>preferred size</b> of a widget is the minimum size needed to show
+  <li>The <em>preferred size</em> of a widget is the minimum size needed to show
     its content. This is computed differently for each kind of widget.&nbsp; In
     the case of a composite, the preferred size is the minimum size that
-    contains the composite and all of its children at their preferred size.</li>
-  <li>The <b>clientArea</b> is the size of a widget's content area.</li>
-  <li>The <b>trim</b> is the distance between a widget's client Area and its
+    contains the composite and all of its children at their preferred sizes.</li>
+  <li>The <em>clientArea</em> is the size of a widget's content area.</li>
+  <li>The <em>trim</em> is the distance between a widget's client area and its
     actual border.&nbsp; Trim is occupied by the widget's borders or extra space
-    at the edge of a widget.&nbsp; The size and appearance of the trim is widget
+    at its edge.&nbsp; The size and appearance of the trim is widget
     and platform dependent.</li>
 </ul>
 <P >
 These concepts are relevant for applications regardless of whether a layout is used. You can think of a layout as a convenient way to package resize functionality for reuse. </P>
 <P >
-Some additional concepts are introduced by layouts. </P>
+Some additional concepts are introduced by layouts: </P>
 <ul>
-  <li>Some layouts support&nbsp; <b>spacing </b>between widgets in the
+  <li>Some layouts support&nbsp; <em>spacing</em> between widgets in the
     layout.&nbsp;&nbsp;</li>
-  <li>Some layouts support a <b>margin</b> between the edge of the layout and
+  <li>Some layouts support a <em>margin</em> between the edge of the layout and
     the widget adjacent to the edge.</li>
 </ul>
 <P >
 See <a href="http://www.eclipse.org/articles/Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
-Layouts in SWT</a>&nbsp; for further discussion and pictures demonstrating these concepts. </P>
+layouts in SWT</a>&nbsp; for further discussion and pictures demonstrating these concepts. </P>
 <P >
-The following code snippet shows the simple case of an application using a resize callback to size a label to the size of its parent shell.</P>
+The following code snippet shows the simple case of an application using a resize callback to size a label to the size of its parent shell:</P>
 <font color='#4444CC'><pre>
    Display display = new Display ();
    Shell shell = new Shell (display);
    Label label = new Label (shell, SWT.CENTER);
-   shell.addControlListener(new ControlAdapter() {
-      public void controlResized(ControlEvent e) {
+   shell.addControlListener (new ControlAdapter () {
+      public void controlResized (ControlEvent e) {
          label.setBounds (shell.getClientArea ());
       }
    });
@@ -68,7 +68,7 @@ The next snippet uses a layout to achieve the same effect:</P>
    Display display = new Display ();
    Shell shell = new Shell (display);
    Label label = new Label (shell, SWT.CENTER);
-   shell.setLayout(new FillLayout());
+   shell.setLayout (new FillLayout ());
 </pre></font>
 <P >
 Even for this simple example, using a layout reduces the application code. For more complex layouts, the simplification is much greater.</P>
