--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_grid.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_grid.htm
@@ -16,18 +16,18 @@ GridLayout
 <H3>
 GridLayout</H3>
 <P >
-<a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
-GridLayout</b></a> is the one of the more powerful (and more complex) layout. <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
-GridLayout</b></a> lays out widgets in a grid, providing many configurable parameters that control the behavior of the grid rows and columns when the composite is resized.</P>
+<a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><strong>
+GridLayout</strong></a> is one of the more powerful and complex layouts. <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><strong>
+GridLayout</strong></a> lays out widgets in a grid, providing many configurable parameters that control the sizing behavior of the grid rows and columns when the composite is resized.</P>
 <P >
-The <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
-GridLayout</b></a> defines API that controls the overall strategy of the layout. The most important attribute is
-<b>numColumns</b>, which determines the horizontal size of the grid. Typically you decide on this value when you first design your window's appearance. The order of the widgets in the grid is the same as the order in which you create them. To change the order of the widgets in the grid, you can use the
-<b><a href="../reference/api/org/eclipse/swt/widgets/Control.html"> Control</a></b> methods
-<b> moveAbove(Control)</b> and <b> moveBelow(Control).</b> These methods allow widgets to be inserted before or after each other in the layout. (The &quot;above&quot; and &quot;below&quot; refer to the widget Z ordering, not the location in the grid itself.)</P>
+The <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><strong>
+GridLayout</strong></a> defines API that controls the overall strategy of the layout. The most important attribute is
+<strong>numColumns</strong>, which determines the horizontal size of the grid. Typically you decide on this value when you first design your window's appearance. The order of the widgets in the grid is the same as the order in which you create them. To change the order of the widgets in the grid, you can use the
+<strong><a href="../reference/api/org/eclipse/swt/widgets/Control.html"> Control</a></strong> methods
+<strong> moveAbove(Control)</strong> and <strong> moveBelow(Control).</strong> These methods allow widgets to be inserted before or after each other in the layout. (The &quot;above&quot; and &quot;below&quot; refer to the widget Z ordering, not to the location in the grid itself).</P>
 <P >
-The following table summarizes the configurable parameters for a <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
-GridLayout</b></a>.</P>
+The following table summarizes the configurable parameters for a <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><strong>
+GridLayout</strong></a>:</P>
 <TABLE BORDER="1">
 <TR>
 <TH ROWSPAN="1" COLSPAN="1">
@@ -42,8 +42,8 @@ Description</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-horizontalSpacing</b></P>
+<strong>
+horizontalSpacing</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -53,8 +53,8 @@ Number of pixels between the right edge of one cell and the left edge of its nei
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-makeColumnsEqualWidth</b></P>
+<strong>
+makeColumnsEqualWidth</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -64,8 +64,8 @@ Specifies whether all columns should be forced to the same width.</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-marginWidth</b></P>
+<strong>
+marginWidth</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -75,8 +75,8 @@ Number of pixels used for margin on the right and left edge of the grid.</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-marginHeight</b></P>
+<strong>
+marginHeight</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -86,8 +86,8 @@ Number of pixels used for margin on the top and bottom edge of the grid.</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-numColumns</b></P>
+<strong>
+numColumns</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -97,8 +97,8 @@ Number of columns that should be used to make the grid.</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-verticalSpacing</b></P>
+<strong>
+verticalSpacing</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -106,24 +106,24 @@ Number of pixels between the bottom edge of one cell and the top edge of its nei
 </TD>
 </TR>
 </TABLE>
-<P ><a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
-GridLayout</b></a> supports many other layout parameters for each widget in the grid. These properties are specified in
-a <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b>GridData</b></a>
- object. You must set a <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>
-as the <b> layoutData</b> for each widget in the grid.</P>
+<P ><a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><strong>
+GridLayout</strong></a> supports many other layout parameters for each widget in the grid. These properties are specified in
+a <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><strong>GridData</strong></a>
+ object. You must set a <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><strong> GridData</strong></a>
+as the layout data for each widget in the grid.</P>
 <P >
-The <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a> class defines style constants that
+The <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><strong> GridData</strong></a> class defines style constants that
 let you specify commonly used combinations of layout parameters in the
-<a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>
+<a href="../reference/api/org/eclipse/swt/layout/GridData.html"><strong> GridData</strong></a>
 constructor. You can also set these attributes individually using the public methods in
-<a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>.</P>
+<a href="../reference/api/org/eclipse/swt/layout/GridData.html"><strong> GridData</strong></a>.</P>
 <P >
-You can achieve some highly dynamic and complex layouts using the <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>. Tweaking these values for different widgets in the grid can produce many different combinations of layouts. Even the most complex dialog layouts can be specified using the
-<a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>. The ability to allow widgets to span across cells produces many layouts that don't even look like a grid.</P>
+You can achieve some highly dynamic and complex layouts using the <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><strong> GridData</strong></a>. Tweaking these values for different widgets in the grid can produce many different combinations of layouts. 
+The ability to allow widgets to span across cells produces many layouts that don't even look like a grid.</P>
 <P >
-The following table summarizes the configurable parameters for <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>.&nbsp;&nbsp;
+The following table summarizes the configurable parameters for <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><strong> GridData</strong></a>.&nbsp;&nbsp;
 See&nbsp;<a href="http://www.eclipse.org/articles/Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
-Layouts in SWT</a>
+layouts in SWT</a>
 for further description and example screen captures using the various grid
 parameters.</P>
 <TABLE BORDER="1">
@@ -140,8 +140,8 @@ Description</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-grabExcessHorizontalSpace</b></P>
+<strong>
+grabExcessHorizontalSpace</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -152,8 +152,8 @@ their grid data, any extra space remaining in the Composite will be allocated to
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-grabExcessVerticalSpace</b></P>
+<strong>
+grabExcessVerticalSpace</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -163,8 +163,8 @@ Specifies whether a cell should grow to use any extra vertical space available i
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-heightHint</b></P>
+<strong>
+heightHint</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -174,20 +174,20 @@ Specifies a minimum height for the widget (and therefore for the row that contai
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-horizontalAlignment</b></P>
+<strong>
+horizontalAlignment</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
-Can be one of <b>BEGINNING</b>, <b>CENTER</b>,
-<b>END</b>, <b>FILL</b>. <b> FILL</b> means that the widget will be sized to take up the entire width of its grid cell.</P>
+Can be one of <strong>BEGINNING</strong>, <strong>CENTER</strong>,
+<strong>END</strong>, <strong>FILL</strong>. <strong> FILL</strong> means that the widget will be sized to take up the entire width of its grid cell.</P>
 </TD>
 </TR>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-horizontalIndent</b></P>
+<strong>
+horizontalIndent</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -197,8 +197,8 @@ Number of pixels between the widget and the left edge of its grid cell.</P>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-horizontalSpan</b></P>
+<strong>
+horizontalSpan</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -208,20 +208,20 @@ Specifies the number of columns in the grid that the widget should span. By defa
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-verticalAlignment</b></P>
+<strong>
+verticalAlignment</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
-Can be one of <b>BEGINNING</b>, <b>CENTER</b>,
-<b>END</b>, <b>FILL</b>. <b> FILL</b> means that the widget will be sized to take up the entire height of its grid cell.</P>
+Can be one of <strong>BEGINNING</strong>, <strong>CENTER</strong>,
+<strong>END</strong>, <strong>FILL</strong>. <strong> FILL</strong> means that the widget will be sized to take up the entire height of its grid cell.</P>
 </TD>
 </TR>
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-verticalSpan</b></P>
+<strong>
+verticalSpan</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
@@ -232,8 +232,8 @@ cell in the grid. It can take additional cells vertically by increasing this val
 <TR>
 <TD>
 <P CLASS="CellBody">
-<b>
-widthHint</b></P>
+<strong>
+widthHint</strong></P>
 </TD>
 <TD>
 <P CLASS="CellBody">
