--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_debug.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_debug.htm
@@ -55,7 +55,7 @@ debugging of Java code.</p>
     org.eclipse.jdt.debug.ui</b></a> implements a simple UI for locating source
     code by prompting the user.</li>
 </ul>
-<p><a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"> 
+<p><a href="../hglegal2003.htm"><img src="../ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" width="324" height="14"> 
   </a> </p>
 </body>
 </html>
